tests/js_error/stack_trace/script_top_level_error.exp
Error: test
  at bar (tests/js_error/stack_trace/script_top_level_error.js:2:9)
  at <global> (tests/js_error/stack_trace/script_top_level_error.js:5:1)
