tests/js_error/stack_trace/script_top_level_error.js
function bar() {
  throw new Error('test')
}

bar();